--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Genfit"
         tools:targetApi="31">
         <activity
+            android:name=".IntroSecond_Activity2"
+            android:exported="false" />
+        <activity
             android:name=".introFirst_Activity"
             android:exported="false" />
         <activity
