--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.Genfit"
         tools:targetApi="31">
         <activity
-            android:name=".IntroSecond_Activity2"
+            android:name=".Intro.IntroSecond_Activity2"
             android:exported="false" />
         <activity
-            android:name=".introFirst_Activity"
+            android:name=".Intro.introFirst_Activity"
             android:exported="false" />
         <activity
-            android:name=".PresetActivity"
+            android:name=".Preset.PresetActivity"
             android:exported="false" />
         <activity
-            android:name=".ChatActivity"
+            android:name=".Chat.ChatActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
