--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.Genfit"
         tools:targetApi="31">
         <activity
-            android:name=".Intro.IntroSecond_Activity2"
+            android:name=".Intro.introThird_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Intro.IntroSecond_Activity"
             android:exported="false" />
         <activity
             android:name=".Intro.introFirst_Activity"
