--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,18 @@
         android:theme="@style/Theme.Genfit"
         tools:targetApi="31">
         <activity
-            android:name=".IntroSecond_Activity2"
+            android:name=".Intro.IntroSecond_Activity"
             android:exported="false" />
         <activity
             android:name=".Intro.introFirst_Activity"
             android:exported="false" />
         <activity
-            android:name=".Preset.PresetActivity"
-            android:exported="false" />
-        <activity
             android:name=".Chat.ChatActivity"
             android:exported="false" />
+        <activity android:name=".Frags.FragMain"
+            android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Preset.PresetActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
