--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
             android:name=".Intro.IntroSecond_Activity"
             android:exported="false" />
         <activity
-            android:name=".Intro.introFirst_Activity"
+            android:name=".Intro.IntroThird_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Preset.PresetGenderActivity"
             android:exported="false" />
         <activity
             android:name=".Chat.ChatActivity"
@@ -26,7 +29,7 @@
         <activity android:name=".Frags.FragMain"
             android:exported="false" />
         <activity
-            android:name=".Preset.PresetGenderActivity"
+            android:name=".Intro.IntroFirst_Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
