--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Genfit"
         tools:targetApi="31">
+
         <activity
             android:name=".Intro.IntroSecond_Activity"
             android:exported="false" />
@@ -29,16 +31,20 @@
             android:exported="false" />
         <activity android:name=".Preset.PresetActivity"
             android:exported="false" />
+
         <activity android:name=".Frags.FragMain"
-            android:exported="false" />
-        <activity
-            android:name=".Intro.IntroFirst_Activity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".Intro.IntroFirst_Activity"
+            android:exported="false">
         </activity>
     </application>
 
