--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+def OPENAI_API_KEY = localProperties.getProperty('openai_api_key')
+
 android {
     namespace 'com.realese.genfit'
     compileSdk 33
@@ -17,10 +21,18 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures {
+        buildConfig = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "OPENAI_API_KEY ", localProperties['openai_api_key']
+        }
+        debug{
+            buildConfigField "String", "OPENAI_API_KEY ", localProperties['openai_api_key']
         }
     }
     compileOptions {
