--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-storage'
     implementation 'com.airbnb.android:lottie:3.4.0'//4
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -70,9 +71,8 @@ dependencies {
     implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'//
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.2.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.6.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
