--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Genfit"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".GalleryActivity"
+            android:exported="false" />
+        <activity
             android:name=".Intro.IntroFirst_Activity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Intro.IntroSecond_Activity"
             android:exported="false" />
@@ -31,12 +34,12 @@
         <activity
             android:name=".Chat.ChatActivity"
             android:exported="false" />
-        <activity android:name=".Preset.PresetActivity"
+        <activity
+            android:name=".Preset.PresetActivity"
             android:exported="false" />
-
-        <activity android:name=".Frags.FragMain"
+        <activity
+            android:name=".Frags.MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
